tests/baselines/reference/ambientExternalModuleWithRelativeExternalImportDeclaration.errors.txt
tests/cases/compiler/ambientExternalModuleWithRelativeExternalImportDeclaration.ts(2,5): error TS2439: Import or export declaration in an ambient module declaration cannot reference module through relative module name.
tests/cases/compiler/ambientExternalModuleWithRelativeExternalImportDeclaration.ts(2,25): error TS2307: Cannot find module './SubModule' or its corresponding type declarations.


==== tests/cases/compiler/ambientExternalModuleWithRelativeExternalImportDeclaration.ts (2 errors) ====
    declare module "OuterModule" {
        import m2 = require("./SubModule");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2439: Import or export declaration in an ambient module declaration cannot reference module through relative module name.
                            ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './SubModule' or its corresponding type declarations.
        class SubModule {
            public static StaticVar: number;
            public InstanceVar: number;
            public x: m2.c;
            constructor();
        }
        export = SubModule;
    }